# unifiedefficientloader

./: README.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
tests/: benchmark_standard.py  manual_test.py  test_examples.md  test_logging.py  test_utils.py
unifiedefficientloader/: __init__.py  logging_utils.py  memory_efficient_loader.py  pinned_transfer.py  tensor_utils.py
